test_programs/compile_failure/unify_different_generic_arith/src/main.nr
fn foo<N>(_x: [Field; N]) -> [Field; N+1] {
    [0; N+2]
}

fn main() {
    assert(0 == 0);
}
